Bug: Z-indexing

--- a/src/app/components/message-form/message-form.component.scss
+++ b/src/app/components/message-form/message-form.component.scss
@@ -1,6 +1,6 @@
 .container {
     position: fixed;
-    z-index: 2;
+    z-index: 3;
     left: 0;
     top: 0;
     width: 100%;
